fix: ensure changes are shown on smaller viewports

--- a/components/o-topper/src/scss/themes/_deep-landscape.scss
+++ b/components/o-topper/src/scss/themes/_deep-landscape.scss
@@ -11,6 +11,7 @@
 	.o-topper__content {
 		display:inline-block;
 		grid-row: 1;
+	  	grid-column: 1 / span 2;
 		box-sizing: border-box;
 		align-self: end;
 		background: transparent;
@@ -53,8 +54,6 @@
 	@include oGridRespondTo( $until:S) {
 		.o-topper__content {
 			width:100%;
-			align-self: end;
-			grid-column: 1 / span 2;
 			padding:20px;
 		}
 	}
@@ -62,24 +61,17 @@
 	@include oGridRespondTo($from:S , $until:M) {
 		.o-topper__content {
 			width:75%;
-			grid-column: 1/span 2;
-			margin: auto auto auto 10%;
 		}
 	}
 	@include oGridRespondTo($from:M , $until:L) {
 		.o-topper__content {
 			width:50%;
-			grid-column: 1/span 2;
-			margin: auto auto auto 10%;
 		}
 	}
 
 	@include oGridRespondTo(L) {
 		grid-template-rows: 66vw 1fr;
 
-		.o-topper__content {
-			grid-column: 1 span/2;
-		}
 		.o-topper__image{
 			height:66vw;
 		}
